--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "python.analysis.extraPaths": [
-        "D:\\ProgramData\\anaconda3\\Lib\\site-packages"
+        "D:\\ProgramData\\anaconda3\\Lib\\site-packages",
+        "D:\\ProgramData\\anaconda3\\Lib\\site-packages\\typings",
+        "D:\\ProgramData\\anaconda3\\Lib\\site-packages\\typings\\selenium\\webdriver\\common"
     ]
 }
