--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
     "python.analysis.extraPaths": [
         "D:\\ProgramData\\anaconda3\\Lib\\site-packages",
         "D:\\ProgramData\\anaconda3\\Lib\\site-packages\\typings",
-        "D:\\ProgramData\\anaconda3\\Lib\\site-packages\\typings\\selenium\\webdriver\\common"
+        "D:\\ProgramData\\anaconda3\\Lib\\site-packages\\typings\\selenium\\webdriver\\common\\keys.pyi"
     ]
 }
